--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 // Call the function to play background music
                 playBackgroundMusic();
             } else {
-                alert("Thala not for a reason😢");
+                alert("Thala not for a reason😢 Please Enter a 7 letter word.");
             }
 
 
