--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             margin-bottom: 10px;
             border-radius: 8px;
         }
+        footer {
+            margin-top: 20px;
+            text-align: center;
+            color: #333;
+        }
     </style>
 </head>
 
@@ -97,6 +102,9 @@
 
     </div>
 
+    <footer>
+        Made by Amit Karmakar:)
+    </footer>
     <script>
         function checkWord() {
             var inputElement = document.getElementById('wordInput');
