--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
             border-radius: 8px;
         }
         footer {
-            margin-top: 20px;
-            text-align: center;
-            color: #333;
-        }
+    margin-top: 230px;
+    margin-bottom: -100px;
+    text-align: center;
+    color: #333;
+}
     </style>
 </head>
 
